--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
     <div class="container">
     <header>
         <nav class="main-nav">
-            <a href=""><img src="/img/WebStudio.svg" alt="logos"></a>
+            <a href=""><img src="./img/WebStudio.svg" alt="logos"></a>
             <ul class="pagination">
                 <li class="item" id="portfolio-studio"><a href="/index.html">Студия</a></li>
                 <li class="item"><a href="/portfolio.html">Портфолио</a></li>
@@ -74,13 +74,13 @@
 <section class="activity">
     <h2>Чем мы занимаемся</h2>
     <ul class="activity-main">
-            <li class="desktop-applications"><img src="/img/box1.jpg" alt="box 1" width="370">
+            <li class="desktop-applications"><img src="./img/box1.jpg" alt="box 1" width="370">
                 <p class="applications-paragraph">Десктопные приложения</p>
         </li>
-            <li class="mobile-applications"><img src="/img/box2.jpg" alt="box 2" width="370">
+            <li class="mobile-applications"><img src="./img/box2.jpg" alt="box 2" width="370">
                 <p class="mobile-applications-paragraph">Мобильные приложения</p>
         </li>
-            <li class="design-solution"><img src="/img/box3.jpg" alt="box 3" width="370">
+            <li class="design-solution"><img src="./img/box3.jpg" alt="box 3" width="370">
                 <p class="design-solution-paragraph">Дизайнерские решения</p>
     </li>
     </ul>
@@ -90,7 +90,7 @@
     <h2>Наша команда</h2>
     <div class="command">
     <ul class="member">
-        <li><img src="/img/img.jpg" alt="Игорь Демьяненко" width="270"></li>
+        <li><img src="./img/img.jpg" alt="Игорь Демьяненко" width="270"></li>
         <li><p>Игорь Демьяненко</p></li>
         <li><p class="profession">Product Designer</p></li>
         <li class="social"> 
@@ -123,7 +123,7 @@
         </li>
     </ul>
     <ul class="member">
-        <li><img src="/img/img1.jpg" alt="Ольга Репина" width="270"></li>
+        <li><img src="./img/img1.jpg" alt="Ольга Репина" width="270"></li>
         <li><p>Ольга Репина</p></li>
         <li><p class="profession">Frontend Developer</p></li>
         <li class="social"> 
@@ -156,7 +156,7 @@
         </li>
     </ul>
     <ul class="member">
-        <li><img src="/img/img2.jpg" alt="Николай Тарасов" width="270"></li>
+        <li><img src="./img/img2.jpg" alt="Николай Тарасов" width="270"></li>
         <li><p>Николай Тарасов</p></li>
         <li><p class="profession">Marketing</p></li>
         <li class="social"> 
@@ -189,7 +189,7 @@
         </li>
     </ul>
     <ul class="member">
-        <li><img src="/img/img3.jpg" alt="Михаил Ермаков" width="270"></li>
+        <li><img src="./img/img3.jpg" alt="Михаил Ермаков" width="270"></li>
         <li><p>Михаил Ермаков</p></li>
         <li><p class="profession">UI Designer</p></li>
         <li class="social"> 
@@ -268,7 +268,7 @@
   <div class="container">
     <nav class="nav-footer">
          <ul class="aside-footer">
-                <li><a href=""><img src="/img/WebStudio.svg" alt="logos"></a></li>
+                <li><a href=""><img src="./img/WebStudio.svg" alt="logos"></a></li>
                 <li><p id="contacts">г. Киев, пр-т Леси Украинки, 26</p></li>
                 <li class="mailto-footer"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="tel-footer"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
